[package]
name = "cairo_viewport"
version = "0.1.0"
edition = "2024"
description = "A viewport for cairo-rs to simplify creating images"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/cairo_viewport.git"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "docs/**",
    "tests/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = {version = "0.21", features = ["png", "pdf", "svg", "ps"]}
bounding_box = { version = "0.2.0"}
rand = { version = "0.8.5", optional = true}
image = { version = "0.25", optional = true}
image-compare = { version = "0.4", optional = true}

[features]
default = []
image-compare = ["dep:image", "dep:image-compare", "dep:rand"]

[dev-dependencies]
cairo_viewport = { path = ".", features = ["image-compare"] }

[package.metadata.docs.rs]
features = ["image-compare"]